syntax = "proto3";
package supervisor_service;
import "types.proto";


// アカウント作成
// CreateAccount
message CreateAccountRequest {
  types.Account account = 1;
}
message CreateAccountReply  {
  int64 revision = 1;
  types.Account account = 2;
}

// プロフィール作成
// CreateProfile
message CreateProfileRequest {
  types.Profile profile = 1;
}
message CreateProfileReply  {
  int64 revision = 1;
  types.Profile profile = 2;
}

// オペレーション書き込み(事後報告)
// RecordOperation
message RecordOperationRequest {
  types.Operation op = 1;
}
message RecordOperationReply  {
  int64 revision = 1;
  types.Operation op = 2;
}


service SupervisorService {
  rpc Ping(types.PingRequest) returns (types.PingReply) {};

  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountReply) {};
  rpc CreateProfile(CreateProfileRequest) returns (CreateProfileReply) {};
  rpc RecordOperation(RecordOperationRequest) returns (RecordOperationReply) {};
}