syntax = "proto3";
package account_service;
import "types.proto";


// アカウント更新
// UpdateAccount
message UpdateAccountRequest {
  types.Profile profile = 1;
}
message UpdateAccountReply  {
  int64 revision = 1;
  types.Profile profile = 2;
}

// アカウント削除
// DeleteAccount
message DeleteAccountRequest {}
message DeleteAccountReply  {
  int64 revision = 1;
}

// プロフィール更新
// UpdateProfile
message UpdateProfileRequest {
  types.Profile profile = 1;
}
message UpdateProfileReply  {
  int64 revision = 1;
  types.Profile profile = 2;
}

// 友達一覧取得
// GetFriends
message GetFriendsRequest {}
message GetFriendsReply  {
  int64 revision = 1;
  repeated string userIds = 2;
}

// 友達追加
// AddFriend
message AddFriendRequest {
  string userId = 1;
}
message AddFriendReply  {
  int64 revision = 1;
}

// ユーザーブロック
// BlockUser
//message BlockUserRequest {}
//message BlockUserReply  {}


service AccountService {
  rpc Ping(types.PingRequest) returns (types.PingReply) {};

  rpc UpdateAccount(UpdateAccountRequest) returns (UpdateAccountReply) {};
  rpc DeleteAccount(DeleteAccountRequest) returns (DeleteAccountReply) {};
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileReply) {};
  rpc GetFriends(GetFriendsRequest) returns (GetFriendsReply) {};
  rpc AddFriend(AddFriendRequest) returns (AddFriendReply) {};
}